01-tutorials/03-AgentCore-identity/13-Private-IdP-Keycloak-Runtime/keycloak-infra.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Private Keycloak IdP infrastructure for AgentCore Identity samples.
  Deploys Keycloak on EC2 behind an internal ALB with ACM certificate.

Parameters:
  DomainName:
    Type: String
    Description: FQDN for Keycloak (e.g., keycloak.example.people.aws.dev)
  HostedZoneId:
    Type: AWS::Route53::HostedZone::Id
    Description: Route53 hosted zone ID for DNS validation and alias record
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC where Keycloak and ALB will be deployed
  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: At least 2 subnets in different AZs (for ALB)
  KeycloakAdminPassword:
    Type: String
    NoEcho: true
    MinLength: 12
    Description: Keycloak admin password

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Keycloak EC2 + ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 10.0.0.0/8
          Description: Keycloak HTTP from VPC
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/8
          Description: ALB HTTPS from VPC

  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles: [!Ref InstanceRole]

  KeycloakInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}'
      InstanceType: t3.medium
      SubnetId: !Select [0, !Ref SubnetIds]
      SecurityGroupIds: [!Ref SecurityGroup]
      IamInstanceProfile: !Ref InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum install -y docker
          systemctl enable docker && systemctl start docker
          docker run -d --name keycloak --restart always \
            -p 8080:8080 \
            -e KEYCLOAK_ADMIN=admin \
            -e KEYCLOAK_ADMIN_PASSWORD=${KeycloakAdminPassword} \
            -e KC_HOSTNAME=https://${DomainName} \
            -e KC_HOSTNAME_STRICT=false \
            -e KC_HTTP_ENABLED=true \
            -e KC_PROXY_HEADERS=xforwarded \
            quay.io/keycloak/keycloak:26.0 start-dev
      Tags:
        - Key: Name
          Value: keycloak-private-idp

  Certificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref DomainName
      ValidationMethod: DNS
      DomainValidationOptions:
        - DomainName: !Ref DomainName
          HostedZoneId: !Ref HostedZoneId

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Protocol: HTTP
      Port: 8080
      VpcId: !Ref VpcId
      TargetType: instance
      Targets:
        - Id: !Ref KeycloakInstance
      HealthCheckPath: /realms/master
      HealthCheckIntervalSeconds: 30
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    # checkov:skip=CKV_AWS_91:Access logging omitted for tutorial simplicity
    Properties:
      Scheme: internal
      Subnets: !Ref SubnetIds
      SecurityGroups: [!Ref SecurityGroup]
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: 'true'
        - Key: access_logs.s3.enabled
          Value: 'false'

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Protocol: HTTPS
      Port: 443
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
        - CertificateArn: !Ref Certificate
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  DNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: !Ref DomainName
      Type: A
      AliasTarget:
        HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID
        DNSName: !GetAtt ALB.DNSName

Outputs:
  DiscoveryUrl:
    Value: !Sub 'https://${DomainName}/realms/orion/.well-known/openid-configuration'
    Description: OIDC discovery URL for AgentCore customJWTAuthorizer
  KeycloakUrl:
    Value: !Sub 'https://${DomainName}'
  VpcId:
    Value: !Ref VpcId
  SubnetIds:
    Value: !Join [',', !Ref SubnetIds]
  SecurityGroupId:
    Value: !Ref SecurityGroup
  InstanceId:
    Value: !Ref KeycloakInstance
